hardcoded values made configurable

--- a/src/sim/parsim/ChangeLog
+++ b/src/sim/parsim/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-13   Andras Varga
+
+	*
+
 2004-11-23  ------ omnetpp-3.0b1 released ------
 
 2004-11-03  ------ omnetpp-3.0a9 released ------
@@ -26,17 +30,17 @@
 
 2004-03-01  Andras Varga
 
-	* classes cParsimCommunications, cCommBuffer, cParsimPartition, 
+	* classes cParsimCommunications, cCommBuffer, cParsimPartition,
 	cNMPLookahead became subclassed from cPolymorphic so that they work
 	with updated Register_Class()/createOne(). (cParsimSynchronization
 	was already a cPolymorhpic, via the cScheduler base class.)
 
 2004-02-12  Andras Varga
 
-	* cproxygate.cc/.h: fix: local copy of messages sent out from the 
+	* cproxygate.cc/.h: fix: local copy of messages sent out from the
 	partition was not deleted
 
-	* communications classes: provided default impl. for broadcast() 
+	* communications classes: provided default impl. for broadcast()
 	in base class; broadcastException() to "eat" exceptions during
 	broadcasting exception (not interested in stacked exceptions...)
 
