*** empty log message ***

--- a/doc/src/manual/ch-overview.tex
+++ b/doc/src/manual/ch-overview.tex
@@ -394,12 +394,12 @@ tool. The flexibility of the topology description language also
 supports this approach.
 
 
-\subsection{What is what in the directories}
+\subsection{What is in the distribution}
 
-To help you navigate among files in the {\opp} distribution,
-here's a list what you can find in the different directories.
-
-The \texttt{omnetpp} directory contains the following subdirectories.
+If you installed the source distribution, the omnetpp directory on your system
+should contain the following subdirectories. (If you installed a precompiled
+distribution, some of the directories may be missing, or there might be
+additional directories, e.g. containing software bundled with {\opp}.)
 
 The simulation system itself:
 
