--- a/doc/README
+++ b/doc/README
@@ -27,54 +27,50 @@ additional directories, e.g. containing software bundled with OMNeT++.)
 
 The simulation system itself:
 
-omnetpp/              OMNeT++ root directory
-   bin/               OMNeT++ executables (GNED, nedc, etc.)
-   include/           simulation kernel header files for models
-   lib/               library files
-   bitmaps/           icons that can be used in network graphics
-   doc/               manual (PDF), readme, license, etc.
-       html/          manual in HTML
-       api/           API reference in HTML
-   src/               OMNeT++ sources
-       nedc/          NED compiler
-       sim/           simulation kernel
-          parsim/     parallel simulation subsystem
-          netbuilder/ dynamic loading of NED files
-       envir/         common code for user interfaces
-       cmdenv/        command-line user interface
-       tkenv/         Tcl/Tk-based user interface
-       nedxml/        NED parser/generator, C++ code generator, XML, etc.
-       gned/          graphical NED editor
-       plove/         output vector analyzer and plotting tool
-       utils/         makefile-autocreator etc
-   test/              regression tests for the simulation kernel
+  omnetpp/         OMNeT++ root directory
+    bin/           OMNeT++ executables (GNED, nedc, etc.)
+    include/       header files for simulation models
+    lib/           library files
+    bitmaps/       icons that can be used in network graphics
+    doc/           manual (PDF), readme, license, etc.
+      manual/      manual in HTML
+      tictoc-tutorial/  introduction into using OMNeT++
+      api/         API reference in HTML
+      nedxml-api/  API reference for the NEDXML library
+      src/         sources of the documentation
+    src/           OMNeT++ sources
+      nedc/        NED compiler, message compiler
+      sim/         simulation kernel
+        parsim/    files for distributed execution
+        netbuilder/files for dynamically reading NED files
+      envir/       common code for user interfaces
+      cmdenv/      command-line user interface
+      tkenv/       Tcl/Tk-based user interface
+      gned/        graphical NED editor
+      plove/       output vector analyzer and plotting tool
+      scalars      output scalar analyzer and plotting tool
+      nedxml/      NEDXML library
+      utils/       makefile-creator, documentation tool, etc.
+    test/          regression test suite
+      core/        regression test suite for the simulation library
+      distrib/     regression test suite for built-in distributions
+      ...
 
-Sample simulations are within the samples directory.
-Each of the sample directories contain a network description
-(.ned file) and corresponding simple module code  (.h, .cc files).
-Makefiles and project files are included.
+Sample simulations are in the samples directory.
 
-omnetpp/
-   samples/           directories for sample simulations
-       aloha/         models the Aloha protocol
-       cqn/           Closed Queueing Network
-       ...
+    samples/     directories for sample simulations
+      aloha/     models the Aloha protocol
+      cqn/       Closed Queueing Network
+      ...
 
-Some tools to make it easier using MSVC with OMNeT++.
+The contrib directory contains material from the OMNeT++ community.
 
-omnetpp/
-   msvc/
-       appwizard/     Custom AppWizard for Visual Studio (appears in File|New)
-       macros/        macros like AddNEDFileToProject
+    contrib/     directory for contributed material
+      octave/    Octave scripts for result processing
+      emacs/     NED syntax highlight for Emacs
 
-There is also material contributed by people in the OMNeT++ community.
-Contributed material falls under a different license from that of OMNeT++
-(usually GPL).
-
-omnetpp/
-   contrib/
-       emacs/         NED syntax highlight for GNU Emacs
-       octave/        using Octave with OMNeT++
+You may also find additional directories like msvc/, which contain
+integration components for Microsoft Visual C++, etc.
 
 
 The example programs
