--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2004-12-16  Andras Varga
+
+	* cobject.h: setName() made virtual (needs to be overridden in cModule)
+
+	* cmodule.h: added lastsubmodp (speeds up insertSubmodule())
+
 2004-12-10  Andras Varga
 
 	* csimul.h: added getUniqueNumber(), for generating unique IDs for
