--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,10 @@
+2004-12-16  Andras Varga
+
+	* cgate.cc, cmodule.cc: removed ev.getDisplayString() and support 
+	for display strings in omnetpp.ini (section [DisplayStrings])
+
+	* optimizations
+
 2004-12-10  Andras Varga
 
 	* csimulation.cc: implemented getUniqueNumber()
